--- a/datanotebook.Rmd
+++ b/datanotebook.Rmd
@@ -90,6 +90,7 @@ data <- read_csv('finaladultdata.csv', col_types=
                      )
 )
 data
+kable(data)
 ```
 
 Remove dropped participants (they have no main group name, or no data). These are who we dropped. 
