--- a/datanotebook.Rmd
+++ b/datanotebook.Rmd
@@ -3,21 +3,21 @@ title: "Study 1 Adult Data Analysis"
 author: "Adam Stone, PhD"
 date: "August 31, 2017"
 output:
+  github_document:
+    toc: yes
+    toc_depth: 2
   html_notebook:
     code_folding: hide
     theme: united
     toc: yes
     toc_depth: 2
     toc_float: yes
-  github_document:
-    toc: yes
-    toc_depth: 2
 ---
 
 ## Importing and Reshaping Data
-Here we're going to import the data, remove dropped participants, and reshape the data so story and direction are grouping variables (and the dataset will be more tall than wide). Let's see all our data first. 
+Here we're going to import the data, remove dropped participants, and reshape the data so story and direction are grouping variables (and the dataset will be more tall than wide). Let's see all our data first (scroll horizontally).
 
-```{r, echo=TRUE, message=FALSE, warning=FALSE}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 
 # Import packages we'll need.
 library(tidyverse)
@@ -26,6 +26,9 @@ library(lme4)
 library(prettydoc)
 library(broom)
 library(knitr)
+library(xtable)
+library(kableExtra)
+options(knitr.table.format = "html") 
 # Import the data
 data <- read_csv('finaladultdata.csv', col_types=
                    cols(
@@ -86,19 +89,19 @@ data <- read_csv('finaladultdata.csv', col_types=
                      right.rv4 = col_double()
                      )
 )
-kable(head(data))
+kable(data) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed"), font_size=7)
 ```
 
 Remove dropped participants (they have no main group name, or no data). These are who we dropped. 
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 dropped <- filter(data, is.na(maingroup)==TRUE)
 manual <- filter(data,participant=="Lucinda" | participant=="Joe")
 dropped <- rbind(dropped,manual) %>% arrange(id)
 data <- data %>%
   filter(is.na(maingroup)==FALSE) %>% 
   filter(participant!="Lucinda" & participant!="Joe")
-kable(dropped)
+kable(dropped) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed"))
 ```
 
 Now we'll reshape the data. Based on Rain's UNM talk, this is what Group 1 & 2 saw:
@@ -110,7 +113,7 @@ Now we'll reshape the data. Based on Rain's UNM talk, this is what Group 1 & 2 s
 | 3    | Cinderella Fwd    | King Mias Fwd   |
 | 4    | Goldilocks Rev    | Red Riding Hood Rev   |
 
-Let's add that information to our data when we reshape it. Here's the final, "cleaned-up" dataset that we're going to use for all further analysis. 
+Let's add that information to our data when we reshape it. 
 
 ```{r, message=FALSE, warning=FALSE}
 # I tried writing a function to do this using column names as arguments. 
@@ -216,7 +219,11 @@ data <- data %>%
   select(id,participant,hearing,videogroup,aoagroup,languagegroup,maingroup,video,story,
          direction,age,selfrate,signyrs,aoasl,acc,forehead,eyes,mouth,chin,upperchest,
          midchest,lowerchest,belly,left,right)
-kable(head(data, n=10))
+
+```
+Here's the final, "cleaned-up" dataset that we're going to use for all further analysis. Just the first 10 rows. Notice that there are now story and direction columns, and AOI-only columns, and each participant has 4 observation rows (one observation per story). So, more rows, less columns.  
+```{r}
+kable(head(data, n=10)) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
 ## Participant Demographics
@@ -263,9 +270,9 @@ Let's test for statistical significance. A simple ANOVA tell us there is a main 
 data$maingroup <- relevel(data$maingroup, ref="NativeDeaf")
 # Run the ANOVA
 acc.anova <- aov(data=data,acc ~ maingroup*direction)
-summary(acc.anova)
+kable(xtable(acc.anova))
 # Run the posthoc on main group
-TukeyHSD(acc.anova,'maingroup',conf.level = 0.95)
+TukeyHSD(acc.anova,'maingroup',conf.level = 0.95) 
 ```
 
 Group coefficients are here. Remember our reference level ("control") is Native Deaf. Their forward accuracy is 85% with a reversal effect of -9%.  ASL, Forward. Mean accuracy for that is 84%, and its reversal effect is -14%. All the other values are to be added to these coefficients. Hearing Novice ASL's forward accuracy was 78%, with a reversal effect of -6%! 
