--- a/datanotebook.Rmd
+++ b/datanotebook.Rmd
@@ -3,15 +3,15 @@ title: "Study 1 Adult Data Analysis"
 author: "Adam Stone, PhD"
 date: "August 31, 2017"
 output:
-  # github_document:
-  #   toc: yes
-  #   toc_depth: 2
-  html_notebook:
-    code_folding: hide
-    theme: united
+  github_document:
     toc: yes
     toc_depth: 2
-    toc_float: yes
+  # html_notebook:
+  #   code_folding: hide
+  #   theme: united
+  #   toc: yes
+  #   toc_depth: 2
+  #   toc_float: yes
 ---
 
 ## Importing and Reshaping Data
@@ -23,6 +23,7 @@ Here we're going to import the data, remove dropped participants, and reshape th
 library(tidyverse)
 library(stringr)
 library(lme4)
+library(lmerTest)
 library(prettydoc)
 library(broom)
 library(knitr)
@@ -89,7 +90,7 @@ data <- read_csv('finaladultdata.csv', col_types=
                      right.rv4 = col_double()
                      )
 )
-kable(data) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed","responsive"), font_size=7)
+kable(data) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed","responsive"), font_size=7, full_width = F, position = "left")
 ```
 
 Remove dropped participants (they have no main group name, or no data). These are who we dropped. 
@@ -101,7 +102,7 @@ dropped <- rbind(dropped,manual) %>% arrange(id)
 data <- data %>%
   filter(is.na(maingroup)==FALSE) %>% 
   filter(participant!="Lucinda" & participant!="Joe")
-kable(dropped) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed"))
+kable(dropped) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed"), full_width = F, position = "left")
 ```
 
 Now we'll reshape the data. Based on Rain's UNM talk, this is what Group 1 & 2 saw:
@@ -264,21 +265,25 @@ ggplot(accdata,aes(maingroup,acc.mean,color=direction)) +
 
 ```
 
-Let's test for statistical significance. A simple ANOVA tell us there is a main effect of group and direction, but no interactions. Tukey's HSD posthoc tells us that Hearing Novice ASL is significantly different from Deaf Native.  
+Let's test for statistical significance. A simple ANOVA tell us there is a main effect of group and direction, but no interactions. 
 ```{r}
 # Let's set Native Deaf as the reference level to compare all other
 data$maingroup <- relevel(data$maingroup, ref="NativeDeaf")
 # Run the ANOVA
 acc.anova <- aov(data=data,acc ~ maingroup*direction)
-kable(xtable(acc.anova))
+kable(tidy(acc.anova))
+```
+Tukey's HSD posthoc tells us that Hearing Novice ASL is significantly different from Deaf Native.  
+```{r}
 # Run the posthoc on main group
-TukeyHSD(acc.anova,'maingroup',conf.level = 0.95) 
+acc.posthoc <- TukeyHSD(acc.anova,'maingroup',conf.level = 0.95) 
+kable(tidy(acc.posthoc))
 ```
 
 Group coefficients are here. Remember our reference level ("control") is Native Deaf. Their forward accuracy is 85% with a reversal effect of -9%.  ASL, Forward. Mean accuracy for that is 84%, and its reversal effect is -14%. All the other values are to be added to these coefficients. Hearing Novice ASL's forward accuracy was 78%, with a reversal effect of -6%! 
 ```{r}
 #Coefficients
-acc.anova$coefficients
+kable(tidy(acc.anova$coefficients))
 ```
 
 In summary, ANOVA tells us there are main effects of group and direction, no interactions. All of which is a good thing. But I'm curious if there's any item-level effects we should be watching out for. Because there are 4 different stories. Let's plot those out.
@@ -312,6 +317,10 @@ The output tells us now that Hearing Novice ASL is significantly different from 
 ```{r}
 acc.lm <- lmer(data=data, acc ~ maingroup*direction + (direction|id) + (1|story))
 summary(acc.lm)
+```
+Here are the coefficients in a nicer format.
+```{r}
+kable(xtable(coef(summary(acc.lm))))
 ```
 
 
