--- a/datanotebook.Rmd
+++ b/datanotebook.Rmd
@@ -6,16 +6,18 @@ output:
   github_document:
     toc: yes
     toc_depth: 2
-  # html_notebook:
-  #   code_folding: hide
-  #   theme: united
-  #   toc: yes
-  #   toc_depth: 2
-  #   toc_float: yes
+  html_notebook:
+    code_folding: hide
+    theme: paper
+    highlight: tango
+    toc: yes
+    toc_depth: 2
+    toc_float: yes
+    df_print: paged
 ---
 
 ## Importing and Reshaping Data
-Here we're going to import the data, remove dropped participants, and reshape the data so story and direction are grouping variables (and the dataset will be more tall than wide). Let's see all our data first (scroll horizontally).
+Here we're going to import the data, remove dropped participants, and reshape the data so story and direction are grouping variables (and the dataset will be more tall than wide). Let's see ALL of our data first (scroll horizontally).
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 
@@ -90,7 +92,8 @@ data <- read_csv('finaladultdata.csv', col_types=
                      right.rv4 = col_double()
                      )
 )
-kable(data) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed","responsive"), font_size=7, full_width = F, position = "left")
+#kable(data) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed","responsive"), font_size=7, full_width = F, position = "left")
+data
 ```
 
 Remove dropped participants (they have no main group name, or no data). These are who we dropped. 
@@ -102,7 +105,8 @@ dropped <- rbind(dropped,manual) %>% arrange(id)
 data <- data %>%
   filter(is.na(maingroup)==FALSE) %>% 
   filter(participant!="Lucinda" & participant!="Joe")
-kable(dropped) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed"), full_width = F, position = "left")
+#kable(select(dropped,participant,maingroup,age)) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed"), full_width = F, position = "left")
+dropped
 ```
 
 Now we'll reshape the data. Based on Rain's UNM talk, this is what Group 1 & 2 saw:
@@ -114,7 +118,7 @@ Now we'll reshape the data. Based on Rain's UNM talk, this is what Group 1 & 2 s
 | 3    | Cinderella Fwd    | King Mias Fwd   |
 | 4    | Goldilocks Rev    | Red Riding Hood Rev   |
 
-Let's add that information to our data when we reshape it. 
+Let's add that information to our data when we reshape it. You can look at the code below if you want. 
 
 ```{r, message=FALSE, warning=FALSE}
 # I tried writing a function to do this using column names as arguments. 
@@ -224,7 +228,8 @@ data <- data %>%
 ```
 Here's the final, "cleaned-up" dataset that we're going to use for all further analysis. Just the first 10 rows. Notice that there are now story and direction columns, and AOI-only columns, and each participant has 4 observation rows (one observation per story). So, more rows, less columns.  
 ```{r}
-kable(head(data, n=10)) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
+#kable(head(data, n=10)) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
+data
 ```
 
 ## Participant Demographics
@@ -237,7 +242,8 @@ groupmeans <- data %>%
             selfrate = mean(selfrate),
             signyrs = mean(signyrs),
             aoasl = mean(aoasl))
-kable(groupmeans)
+kable(groupmeans, digits=1) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
+#groupmeans
 ```
 
 ## Accuracy Data Analysis
@@ -271,19 +277,19 @@ Let's test for statistical significance. A simple ANOVA tell us there is a main 
 data$maingroup <- relevel(data$maingroup, ref="NativeDeaf")
 # Run the ANOVA
 acc.anova <- aov(data=data,acc ~ maingroup*direction)
-kable(tidy(acc.anova))
+kable(tidy(acc.anova), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 Tukey's HSD posthoc tells us that Hearing Novice ASL is significantly different from Deaf Native.  
 ```{r}
 # Run the posthoc on main group
 acc.posthoc <- TukeyHSD(acc.anova,'maingroup',conf.level = 0.95) 
-kable(tidy(acc.posthoc))
+kable(tidy(acc.posthoc), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
 Group coefficients are here. Remember our reference level ("control") is Native Deaf. Their forward accuracy is 85% with a reversal effect of -9%.  ASL, Forward. Mean accuracy for that is 84%, and its reversal effect is -14%. All the other values are to be added to these coefficients. Hearing Novice ASL's forward accuracy was 78%, with a reversal effect of -6%! 
 ```{r}
 #Coefficients
-kable(tidy(acc.anova$coefficients))
+kable(tidy(acc.anova$coefficients), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
 In summary, ANOVA tells us there are main effects of group and direction, no interactions. All of which is a good thing. But I'm curious if there's any item-level effects we should be watching out for. Because there are 4 different stories. Let's plot those out.
@@ -320,7 +326,7 @@ summary(acc.lm)
 ```
 Here are the coefficients in a nicer format.
 ```{r}
-kable(xtable(coef(summary(acc.lm))))
+kable(xtable(coef(summary(acc.lm))), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
 
