Added some brief eye tracking text

--- a/datanotebook.Rmd
+++ b/datanotebook.Rmd
@@ -332,3 +332,6 @@ kable(xtable(coef(summary(acc.lm))), digits=3) %>% kable_styling(bootstrap_optio
 
 ## Eye Data 
 To come!
+
+Here, I need to write some text about why we made the adult AOIs the way they are. 
+And maybe do a secondary analysis combining upperchest+middlechest and belly+lowerchest to larger AOIs. 
