--- a/datanotebook.Rmd
+++ b/datanotebook.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "Study 1 Adult Data Analysis"
-author: "Adam Stone, PhD"
-date: "August 31, 2017"
+author: "Adam Stone, PhD" 
+date: '`r format(Sys.Date(), "%M-%d-%Y")`'
+#date: "September 4, 2017"
 output:
   github_document:
     toc: yes
@@ -93,7 +94,7 @@ data <- read_csv('finaladultdata.csv', col_types=
                      )
 )
 #kable(data) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed","responsive"), font_size=7, full_width = F, position = "left")
-data
+select(data,-participant)
 ```
 
 Remove dropped participants (they have no main group name, or no data). These are who we dropped. 
@@ -106,17 +107,18 @@ data <- data %>%
   filter(is.na(maingroup)==FALSE) %>% 
   filter(participant!="Lucinda" & participant!="Joe")
 #kable(select(dropped,participant,maingroup,age)) %>% kable_styling(bootstrap_options = c("striped", "hover","condensed"), full_width = F, position = "left")
-dropped
+select(data,-participant)
 ```
 
 Now we'll reshape the data. Based on Rain's UNM talk, this is what Group 1 & 2 saw:
+**Note, I've switched the groups around from Rain's UNM talk** 
 
 | No. | Group1 | Group2 |
 |:------|:-----|:------|
-| 1     | Red Riding Hood Fwd    | Goldilocks Fwd   |
-| 2     | King Midas Rev    | Cinderella Rev   |
-| 3    | Cinderella Fwd    | King Mias Fwd   |
-| 4    | Goldilocks Rev    | Red Riding Hood Rev   |
+| 1     | Goldilocks Fwd    | Red Riding Hood Fwd   |
+| 2     | Cinderella Rev    | King Midas Rev   |
+| 3    | King Midas Fwd    | Cinderella Fwd   |
+| 4    | Red Riding Hood Rev    | Goldilocks Rev   |
 
 Let's add that information to our data when we reshape it. You can look at the code below if you want. 
 
@@ -194,18 +196,20 @@ group1 <- filter(data,videogroup=="Group 1")
 group2 <- filter(data,videogroup=="Group 2")
 
 # Now define levels for story and direction based on that table above
-group1 <- mutate(group1,story = ifelse(video == "fw1","RedRidingHood",
-                                       ifelse(video == "rv2","KingMidas",
-                                              ifelse(video =="fw3","Cinderella","Goldilocks"))))
-group1 <- mutate(group1,direction = ifelse(video == "fw1","forward",
-                                       ifelse(video == "rv2","reversed",
-                                              ifelse(video == "fw3","forward","reversed"))))
-group2 <- mutate(group2,story = ifelse(video == "fw1","Goldilocks",
+group1 <- mutate(group1,story = ifelse(video == "fw1","Goldilocks",
                                        ifelse(video == "rv2","Cinderella",
-                                              ifelse(video=="fw3","KingMidas","RedRidingHood"))))
-group2 <- mutate(group2,direction = ifelse(video == "fw1","forward",
+                                            ifelse(video=="fw3","KingMidas","RedRidingHood"))))
+group1 <- mutate(group1,direction = ifelse(video == "fw1","forward",
                                            ifelse(video == "rv2","reversed",
                                                   ifelse(video == "fw3","forward","reversed"))))
+group2 <- mutate(group2,story = ifelse(video == "fw1","RedRidingHood",
+                                       ifelse(video == "rv2","KingMidas",
+                                              ifelse(video =="fw3","Cinderella","Goldilocks"))))
+group2 <- mutate(group2,direction = ifelse(video == "fw1","forward",
+                                       ifelse(video == "rv2","reversed",
+                                              ifelse(video == "fw3","forward","reversed"))))
+
+
 
 # Join groups back together and view
 data <- rbind(group1,group2)
@@ -229,7 +233,7 @@ data <- data %>%
 Here's the final, "cleaned-up" dataset that we're going to use for all further analysis. Just the first 10 rows. Notice that there are now story and direction columns, and AOI-only columns, and each participant has 4 observation rows (one observation per story). So, more rows, less columns.  
 ```{r}
 #kable(head(data, n=10)) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
-data
+select(data,-participant)
 ```
 
 ## Participant Demographics
@@ -247,7 +251,7 @@ kable(groupmeans, digits=1) %>% kable_styling(bootstrap_options = c("striped", "
 ```
 
 ## Accuracy Data Analysis
-And accuracy boxplots and error bar charts for forward vs. backward stories. 
+And accuracy violins and error bar charts for forward vs. backward stories. 
 ```{r}
 # Summarizing means and SDs
 accdata <- data %>%
@@ -257,7 +261,7 @@ accdata <- data %>%
 
 #Boxplot
 ggplot(data,aes(maingroup,acc,fill=direction)) + 
-  geom_boxplot() +
+  geom_violin() +
   scale_y_continuous(limits=c(0,1)) +
   theme(axis.text.x=element_text(angle=45,hjust=1))
 ```
@@ -329,9 +333,78 @@ Here are the coefficients in a nicer format.
 kable(xtable(coef(summary(acc.lm))), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
+One more thing I just remembered. What if a reviewer asks if Group 1 differed from Group 2 (in other words, was there an effect of stimulus order)? Easy to do now that our data is nicely organized (or "tidy"). 
+```{r}
+acc.lm.order <- lm(data=data, acc ~ videogroup)
+kable(tidy(summary(acc.lm.order)),digits=4)
+```
 
-## Eye Data 
-To come!
+Yikes. Group has an significant effect (p = 0.0396). On average they perform 4% better than Group 1. What's going on here...let's chart it. 
+```{r}
+ggplot(data, aes(x=videogroup, y=acc, fill=videogroup)) + 
+#  geom_point(position="jitter") +
+  geom_violin() +
+  geom_jitter(width=.3)
+```
 
-Here, I need to write some text about why we made the adult AOIs the way they are. 
-And maybe do a secondary analysis combining upperchest+middlechest and belly+lowerchest to larger AOIs. 
+So Group 1 has a lot more bad test results compared to Group 2. But maybe that's a good reason to be using mixed models, and we can account for that by allowing subjects and items (and item order, by definition...I think) to vary randomly. 
+
+## Eye Gaze Data 
+These are our current AOIs. 
+1. Forehead (above eyes)
+2. Eyes
+3. Mouth
+4. Chin (below chin)
+5. Upper Chest
+6. Middle Chest
+7. Lower Chest
+8. Belly
+9. Left
+10. Right
+
+It's possible to do a secondary analysis combining some of these AOIs (in particular, maybe 5-6 and 7-8 can be combined into Torso Upper Half and Torso Lower Half). Anyway, the face AOIs are important, and the division of them into 4 areas is theoretically motivated and also previously seen in the literature. 
+
+*Why 4 AOIs on Face?* Emmorey et al. (2008) did this same setup. We generally know people fixate on the face across all conditions and langauge experiences, but **where** on the face is important for us to know. So these 4 AOIs. 
+
+*Why 4 AOIs for Torso?* At the same time, all papers, tend to just classify the body as "body" with no further breakdown, or two-part breakdown. We know there is a lot of different things happening in that area for signers, too, plus we're lookina at CHILDREN with different language experiences, so they may be interested in different things than adults. So just makes sense to break down body into different regions. 
+
+### Face AOIs
+Let's visualize first of all. 
+```{r}
+# Reduce dataset to face AOIs only
+data.face <- select(data,-upperchest,-midchest,-lowerchest,-belly,-left,-right)
+# Reshape data so we can easily facet our charts based on face AOIs
+data.face <- data.face %>% gather(aoi,looking,forehead:chin)
+# Graph!
+ggplot(data.face,aes(x=maingroup,y=looking,fill=direction)) +
+  geom_boxplot() +
+  theme(axis.text.x=element_text(angle=45,hjust=1)) +
+  facet_wrap("aoi")
+```
+Okay, right away I see some issues - I want to check for outliers but I'm not sure what could count as an outlier. All 4 stories are different lengths - 30 seconds would be fine for King Midas (0:37) but impossible for Red Riding Hood (0:18) so outliers need to be *relative* to the story length itself. Let's back up and do histograms for each story. 
+
+```{r}
+ggplot(data.face,aes(x=looking)) +
+  geom_histogram(binwidth=1) +
+  facet_wrap("story")
+```
+Loooks good but I see weird outliers for Cinderella and Red Riding Hood - those single data points are way out past the video length (and that's just the face AOIs!). Let's sum up *all* AOIs across each story for each participant...back to the big dataset, and we'll do histograms again.
+```{r}
+aoisum <- data %>%
+  group_by(id,story) %>%
+  summarize(total = sum(forehead,eyes,mouth,chin,upperchest,
+                     midchest,lowerchest,belly,left,right,na.rm=TRUE)) %>%
+  arrange(story)
+ggplot(aoisum,aes(x=total)) +
+  geom_histogram(binwidth=1) +
+  facet_wrap("story")
+```
+Okay, we see two issues: 
+1. Some barely watched the story at all. We should remove those. 
+2. A few watched the story longer than the video length itself. Those should be investigated.
+
+
+
+
+<!-- acc.lm <- lmer(data=data, acc ~ maingroup*direction + (direction|id) + (1|story)) -->
+<!-- summary(acc.lm) -->
