--- a/datanotebook.Rmd
+++ b/datanotebook.Rmd
@@ -392,12 +392,11 @@ ggplot(data.face,aes(x=looking)) +
 ```
 Loooks good but I see weird outliers for Cinderella and Red Riding Hood - those single data points are past the video length (and that's just the face AOIs!). Let's sum up *all* AOIs across each story for each participant...back to the big dataset, and we'll do histograms again.
 ```{r}
-aoisum <- data %>%
+data <- data %>%
   group_by(id,story) %>%
-  summarize(total = sum(forehead,eyes,mouth,chin,upperchest,
-                     midchest,lowerchest,belly,left,right,na.rm=TRUE)) %>%
-  arrange(story)
-ggplot(aoisum,aes(x=total)) +
+  mutate(total = sum(forehead,eyes,mouth,chin,upperchest,
+                     midchest,lowerchest,belly,left,right,na.rm=TRUE))
+ggplot(data,aes(x=total)) +
   geom_histogram(binwidth=1) +
   facet_wrap("story") +
   xlab("secs") +
@@ -407,7 +406,59 @@ The tall bars are near the end of the story, right? So we see two issues:
 1. Some barely watched the story at all. (Those are the ones with bars at or near zero). We should remove those. We need a rule for it. 
 2. A few people's AOI data has total seconds higher than the video itself! (Those are the ones with very short bars to the right of the very tall bars.) Those should be investigated, something went wrong in the data. 
 
-I'll highlight those rows that's for #1 and #2 and send to Rain to look at.  
+I'll highlight those rows that's for #2 and send to Rain to look at.  
+
+But maybe a good way for diagnosing problem trials is to look at each AOI for each story, instead of sums of AOIs. Any outliers can be easily seen in the histograms. Let's reshape the data again and generate histograms. 
+ 
+```{r fig.width = 12, fig.height = 12}
+data.reshape <- data %>% gather(aoi,looking,forehead:total)
+ggplot(data.reshape,aes(x=looking)) +
+  geom_histogram(binwidth=1) +
+  facet_grid(aoi ~ story) +
+  xlab("secs") +
+  ggtitle("Looking times of each AOI for each participant for each story")
+```
+
+Nohting really huge jumps out except Cinderella/Mouth and that's one of #2's that I've already marked up for Rain. Maybe Red Riding Hood/Chin but that's also someone I've marked up. 
+
+Cool. Now I want to know how many people have really low looking times for each story. We can do this easily. Here's a table for how many have looking time sums that are less than 25% of the story, or less than 50% of the story.
+```{r}
+# Split into 4 datasets (1 each story)
+data.cinderella <- filter(data,story == "Cinderella")
+data.goldilocks <- filter(data,story == "Goldilocks")
+data.kingmidas <- filter(data,story == "KingMidas")
+data.redridinghood <- filter(data,story== "RedRidingHood")
+
+# FALSE = less than quarter or total story length
+data.cinderella$quarter <- data.cinderella$total >= 5.5
+data.cinderella$half <- data.cinderella$total >= 11
+data.goldilocks$quarter <- data.goldilocks$total >=  5.25
+data.goldilocks$half <- data.goldilocks$total >= 10.5
+data.kingmidas$quarter <- data.kingmidas$total >= 9.25
+data.kingmidas$half <- data.kingmidas$total >= 18.5
+data.redridinghood$quarter <- data.redridinghood$total >= 4.5
+data.redridinghood$half <- data.redridinghood$total >= 9
+
+# Put it back together
+data <- bind_rows(data.cinderella,data.goldilocks,data.kingmidas,data.redridinghood)
+
+# Calculations
+lowlooking <- data %>%
+  group_by(story) %>%
+  summarize(lessthan25 = sum(!quarter),
+            lessthan50 = sum(!half),
+            total = sum(!quarter,quarter))
+lowlooking
+```
+
+```{r rows.print=20}
+lowlookingid <- filter(data,quarter==FALSE) %>% 
+  ungroup() %>%
+  select(id,participant,hearing,videogroup,story,direction,total) %>%
+  arrange(participant)
+write.csv(lowlookingid, file="lessthan25.csv")
+select(lowlookingid,-participant)
+```
 
 
 
