02 to lex recall, 03 eye gaze created.

--- a/01dataimportclean.Rmd
+++ b/01dataimportclean.Rmd
@@ -255,3 +255,5 @@ We'll save this nice clean dataset now and call it `cleandata.csv`.
 ```{r}
 write.csv(data,"cleandata.csv",row.names=FALSE)
 ```
+
+Happy? You can proceed to [Lexical Recall Analysis](02lexicalrecall.nb.html) or [Eye Gaze Analysis](03eyegaze.nb.html).
