--- a/03eyegaze.Rmd
+++ b/03eyegaze.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Story Comprehension Analysis (study1adults)"
+title: "Eye Gaze Analysis (study1adults)"
 author: "Adam Stone, PhD" 
 date: '`r format(Sys.Date(), "%m-%d-%Y")`'
 #date: "September 4, 2017"
@@ -17,8 +17,8 @@ output:
     df_print: paged
 ---
 
-## Picking up where we left off
-This assumes you've already done 01dataimportclean and so there'll be a nice new .csv file to re-import here. Also we gotta import all the libraries again. 
+# Re-Initializing
+This assumes you've already done 01dataimportclean and so there'll be a nice new .csv file to re-import here. Also we gotta import all the libraries again. This shouldn't depend on anything we did for 02 Lexical Recall Analysis. 
 ```{r}
 # Import packages we'll need.
 library(tidyverse)
@@ -68,122 +68,7 @@ data <- data %>%
   mutate(direction = as.factor(direction))
 ```
 
-
-# Analysis by Groups
-And accuracy violins and error bar charts for forward vs. backward stories. 
-```{r}
-# Summarizing means and SDs
-accdata <- data %>%
-  ungroup() %>%
-  group_by(maingroup,direction) %>%
-  summarize(acc.mean = mean(acc, na.rm=TRUE),
-            acc.sd = sd(acc, na.rm=TRUE))
-
-#Boxplot
-ggplot(data,aes(maingroup,acc,fill=direction)) + 
-  geom_violin() +
-  scale_y_continuous(limits=c(0,1)) +
-  theme(axis.text.x=element_text(angle=45,hjust=1))
-```
-```{r}
-# Error bar chart
-ggplot(accdata,aes(maingroup,acc.mean,color=direction)) + 
-  geom_point(position=position_dodge(0.5)) +
-  geom_errorbar(aes(ymin=acc.mean-acc.sd,ymax=acc.mean+acc.sd),width=0.1,position=position_dodge(0.5)) +
-  scale_y_continuous(limits=c(0,1)) +
-  theme(axis.text.x=element_text(angle=45,hjust=1))
-
-```
-
-Let's test for statistical significance. A simple ANOVA tell us there is a main effect of group and direction, but no interactions. 
-```{r}
-# Let's set Native Deaf as the reference level to compare all other
-data$maingroup <- relevel(data$maingroup, ref="NativeDeaf")
-# Run the ANOVA
-acc.anova <- aov(data=data,acc ~ maingroup*direction)
-kable(tidy(acc.anova), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
-```
-Tukey's HSD posthoc tells us that Hearing Novice ASL is significantly different from Deaf Native.  
-```{r}
-# Run the posthoc on main group
-acc.posthoc <- TukeyHSD(acc.anova,'maingroup',conf.level = 0.95) 
-kable(tidy(acc.posthoc), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
-```
-
-Group coefficients are here. Remember our reference level ("control") is Native Deaf. Their forward accuracy is 85% with a reversal effect of -9%.  ASL, Forward. Mean accuracy for that is 84%, and its reversal effect is -14%. All the other values are to be added to these coefficients. Hearing Novice ASL's forward accuracy was 78%, with a reversal effect of -6%! 
-```{r}
-#Coefficients
-kable(tidy(acc.anova$coefficients), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
-```
-
-In summary, ANOVA tells us there are main effects of group and direction, no interactions. All of which is a good thing. But I'm curious if there's any item-level effects we should be watching out for. Because there are 4 different stories. Let's plot those out.
-
-```{r}
-# Run summary stats grouped by story, too
-accdata2 <- data %>%
-  group_by(maingroup,story,direction) %>%
-  summarize(acc.mean = mean(acc, na.rm=TRUE),
-            acc.sd = sd(acc, na.rm=TRUE))
-# Boxplot
-# ggplot(data,aes(maingroup,acc,fill=direction)) + 
-#   geom_boxplot() +
-#   scale_y_continuous(limits=c(0,1)) +
-#   facet_wrap("story")
-
-# Error bar chart
-ggplot(accdata2,aes(maingroup,acc.mean,color=direction)) + 
-  geom_point(position=position_dodge(0.5)) +
-  geom_errorbar(aes(ymin=acc.mean-acc.sd,ymax=acc.mean+acc.sd),width=0.1,position=position_dodge(0.5)) +
-  scale_y_continuous(limits=c(0,1)) +
-  facet_wrap("story") + 
-  theme(axis.text.x=element_text(angle=45,hjust=1))
-```
-
-Boy! Seems King Midas had a strong reversal effect, while Red Riding Hood had a weak reversal effect. Maybe we should put those in as random effects variables in a mixed model, along with participants too. With mixed models, you define predictor variables (what we're interested in; aka, fixed effects) and grouping (what we're not interested in, aka, random effects). This is overkill for simple accuracy data but this will help set us up for eye tracking analysis and **importantly reviewers may ask us about item-level effects given we have just 4 stories.**
-
-So here, we have fixed effects of group and direction, and random effects of story and id, with varying slopes for direction.
-
-The output tells us now that Hearing Novice ASL is significantly different from Deaf Native ASL, that we still have a main effect of direction, with a  significant interaction of direction and Hearing Late ASL. We probably don't need all this in the paper, though, the ANOVA will do and accuracy is not our main point. 
-```{r}
-acc.lm <- lmer(data=data, acc ~ maingroup*direction + (direction|id) + (1|story))
-summary(acc.lm)
-```
-Here are the coefficients in a nicer format.
-```{r}
-kable(xtable(coef(summary(acc.lm))), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
-```
-
-One more thing I just remembered. What if a reviewer asks if Group 1 differed from Group 2 (in other words, was there an effect of stimulus order)? Easy to do now that our data is nicely organized (or "tidy"). 
-```{r}
-acc.lm.order <- lm(data=data, acc ~ videogroup)
-kable(tidy(summary(acc.lm.order)),digits=4)
-```
-
-Yikes. Group has an significant effect (p = 0.0396). On average they perform 4% better than Group 1. What's going on here...let's chart it. 
-```{r}
-ggplot(data, aes(x=videogroup, y=acc, fill=videogroup)) + 
-#  geom_point(position="jitter") +
-  geom_violin() +
-  geom_jitter(width=.3)
-```
-
-So Group 1 has a lot more bad test results compared to Group 2. But maybe that's a good reason to be using mixed models, and we can account for that by allowing subjects and items (and item order, by definition...I think) to vary randomly. 
-
-# AOA Modeling
-Below are models for AOA...I need to look at forward/reversed together and reversed only.
-```{r}
-ggplot(filter(data,direction=="reversed"),aes(x=aoasl,y=acc)) +
-  geom_point() +
-  geom_smooth(method="lm")
-```
-```{r}
-aoa.model <- lm(acc ~ aoasl, data=filter(data,direction=="reversed"))
-summary(aoa.model)
-```
-
-
-# This below needs to be moved into 03eyegaze
-# Eye Gaze Data 
+# AOIs 
 These are our current AOIs. 
 1. Forehead (above eyes)
 2. Eyes
@@ -202,7 +87,7 @@ It's possible to do a secondary analysis combining some of these AOIs (in partic
 
 *Why 4 AOIs for Torso?* At the same time, all papers, tend to just classify the body as "body" with no further breakdown, or two-part breakdown. We know there is a lot of different things happening in that area for signers, too, plus we're lookina at CHILDREN with different language experiences, so they may be interested in different things than adults. So just makes sense to break down body into different regions. 
 
-## Face AOIs (for Rain to look at)
+# Face AOIs
 Let's visualize first of all. 
 ```{r}
 # Reduce dataset to face AOIs only
@@ -295,8 +180,15 @@ select(lowlookingid,-participant)
 ```
 
 
+You’ll have to decide how to put the AOIs in an ANOVA. All of them together is too many.  And you cannot put ALL the AOIs in.  If they all sum to 100% (which they currently do), then the observations are not independent.     Also, you can’t put AOIs that have near-zero values in with AOIs that have super high values, you’ll get whopping significance that is too obvious to reveal anything meaningful. 
+ 
+First, check the most important stats:   Subject Groups, Video Condition, and some AOIs that are on the central body like: eyes, nose, mouth, neck, chest, below chest.   You can combine some.   If you see that no one ever looked at the forehead, you can dispense of that, and say that in the paper when you rationalize your AOIs used for stats.    There might be a significant group main effect, OR a group  main effect for reversed and not for forward, and furthermore, maybe only the late AoA groups show a reversal effect. 
+ 
+Then, how about a section on Percent Looking for AOI’s examines whether there are side biases by doing an ANOVA with the entire Left vs Right side as 2 AOI levels, with Subject Groups, and Forward and Reversed.   If there are side biases, hopefully it is for the later AoA groups, then this means they are being drawn to the hands more than native signers.  It’s possible that this is driven by where the signer puts her dominant hand or by a hemispheric bias.  
+ 
+Maybe even the native signers have a little side bias too for other reasons, but I doubt it.   This is kind of the hand-gravity idea, because there is nothing ever in the sides but arms and hands.
+ 
+If nothing is significant with side biases, you still write all this up in a section in the paper and in the Discussion revisit that saying there were no side biases found.
+ 
+Then when you do a multiple regression analysis, which will be looking at whether gaze behavior can be used to predict accuracy on lexical recall, this will have hearing status, AoA, lexical recall accuracy …. For reversed and not forward?   You can’t put both in.  And a few of the AOI measures, maybe just one.  Maybe a looking-ratio.  Maybe a measure of scatter?  I don't know.  That's where viewing space comes in, and that's saved for later.  If we end up saving this for later, that's fine.    
 
-
-
-<!-- acc.lm <- lmer(data=data, acc ~ maingroup*direction + (direction|id) + (1|story)) -->
-<!-- summary(acc.lm) -->
